# Preparcial-Pruebas

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: test-design.md
src/notas/: __init__.py  errores.py  modelo.py  registro.py
tests/bdd/: test_notas_bdd.py
tests/bdd/features/: notas.feature
tests/unit/: test_aprobacion.py  test_duplicado.py  test_promedio.py  test_validacion_nota.py
