[project]
name = "notas-academicas"
version = "0.1.0"
description = "Modulo de registro de notas academicas - Preparcial de Pruebas de Software"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jerov159" }]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-bdd>=8.0.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "smoke: pruebas rapidas del happy path principal",
    "critical: escenarios criticos de negocio que no pueden fallar",
    "regression: pruebas de regresion sobre bugs ya corregidos",
]

[tool.coverage.run]
source = ["src/notas"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
